--- a/index.css
+++ b/index.css
@@ -70,3 +70,19 @@ align-self: center;
 .res-img {
     width: 100%;
 }
+
+.shimmer-container
+{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.shimmer-card
+{
+    background-color: rgb(212, 208, 208);
+    border: 1px solid lightgray;
+    margin: 14px;
+    height: 300px;
+    width: 22%;
+}
