--- a/index.css
+++ b/index.css
@@ -1,117 +1,3 @@
-.header {
-    width: 99%;
-    border: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
-}
-
-.logo-img {
-    width: 28%;
-}
-
-.nav-items>ul {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-    list-style: none;
-}
-
-.nav-items>ul>li {
-    margin-left: 15px;
-}
-
-.search-comp {
-    display: flex;
-    justify-content: center;
-    margin: 2%;
-    height: 30px;
-}
-
-
-
-.search-input{
-    margin-left: 1%;
-    width: 20%;
-}
-
-.search-lbl
-{
-align-self: center;
-}
-
-.res-comp {
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: space-between;
-}
-
-.res-tile {
-
-    background-color: beige;
-   
-    margin: 10px;
-    padding: 10px;
-
-}
-
-.res-tile>h4{
-    font-size: 14px;
-    font-weight: normal;
-}
-
-.res-comp :hover {
-    cursor: pointer;
-    border: 1px solid lightgray;
-
-}
-
-.link-tile
-{
-    width: 22%;
-}
-
-.res-img {
-    width: 100%;
-}
-
-.shimmer-container
-{
-    display: flex;
-    flex-wrap: wrap;
-
-}
-
-.shimmer-card
-{
-    background-color: rgb(212, 208, 208);
-    border: 1px solid lightgray;
-    margin: 14px;
-    height: 300px;
-    width: 22%;
-}
-
-.menu-container {
-    flex-direction: column;
-    width: 60%;
-    margin-left: 15%;
-    padding: 2%;
-    display: flex;
-}
-
-.list-items
-{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid lightgrey;
-}
-
-.menu-item{
-    align-self: center;
-}
-
-
-
-.menu-img{
-    height: 100px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
